--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 		                    <p>The interface can The system can be useful for medical institutions equipped with PET to enhance diagnostic accuracy and strengten the capacity of diagnostic departments. A unique feature of the findings is the possibility for patients themselves to analyze images in preparation for subsequent visits to relevant specialists</p>
 		                </div>
 		                <div class="col-md-7 col-md-offset-1 col-sm-6 col-sm-offset-1 text-center">
-		                    <img class="cast-shadow" alt="Screenshot" src="img/cover15.jpg">
+		                    <img class="cast-shadow" alt="Screenshot" src="images/interface.jpg">
 		                </div>
 		            </div>
 		            
