--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 		                
 		                
 		                <div class="module widget-handle language left">
+		                	<ul class="menu">
+		                            <a href="/my.html">.</a>
+		                    </ul>
 		                    <ul class="menu">
 		                        <li class="has-dropdown">
 		                            <a href="#">ENG</a>
