--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		                
 		                <div class="module widget-handle language left">
 		                	<ul class="menu">
-		                            <a href="/my.html">...</a>
+		                            <a href="/my.html#wallet">Кабинет</a>
 		                    </ul>
 		                    <ul class="menu">
 		                        <li class="has-dropdown">
