--- a/my.html
+++ b/my.html
@@ -502,23 +502,25 @@
 								<div id="openWallet" class="hidden">
 									<div class="row">
 										<div class="col-md-12">
-											<p><span style="float:right;"><a href="javascript:;" id="walletLogout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></span>Welcome to your wallet, enjoy your stay!</p>
+											<p><span style="float:right;"><a href="javascript:;" id="walletLogout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></span>
+												<ul class="nav nav-pills" role="tablist">
+													<li role="presentation" class="active"><a href="javascript:;" id="walletBalance">0.00 BTC</a></li>
+													<li role="presentation"><a href="javascript:;" id="walletShowKeys">Keys</a></li>
+												</ul>
+
+											</p>
 										</div>
 										<div class="col-md-12" align="center">
 											<div id="walletQrCode"></div> <br>
 											<div>
-												<span id="walletLoader" class="hidden"><img src="images/loader.gif"></span>
+												<span id="walletLoader" class="hidden"><img src="images/loader.gif"></span>						
+												<span id="Scan"><img src="/img/i/scan.gif"></span>
+
 												<span id="walletAddress"></span>
 											</div>
 											<br>
 											<div style="text-align:center; width:350px;">
-												<ul class="nav nav-pills" role="tablist">
-													<li role="presentation" class="active"><a href="javascript:;" id="walletBalance">0.00 BTC</a></li>
-													<li role="presentation"><a href="javascript:;" id="walletShowSpend">Spend</a></li>
-													<li role="presentation"><a id="walletHistory" href="javascript:;" target="_blank">History</a></li>
-													<li role="presentation"><a href="https://localbitcoins.com/?ch=173j" target="_blank">Buy</a></li>
-													<li role="presentation"><a href="javascript:;" id="walletShowKeys">Keys</a></li>
-												</ul>
+
 
 												<br>
 
