--- a/my.html
+++ b/my.html
@@ -514,7 +514,7 @@
 											<div id="walletQrCode"></div> <br>
 											<div>
 												<span id="walletLoader" class="hidden"><img src="images/loader.gif"></span>						
-												<span id="Scan"><img src="/img/i/scan.gif"></span>
+												<span id="Scan"><img src="/img/i/scan.jpg"></span>
 
 												<span id="walletAddress"></span>
 											</div>
