--- a/my.html
+++ b/my.html
@@ -511,14 +511,15 @@
 												</ul>
 
 											</p>
-										</div>
+										</div>											
 										<div class="col-md-12" align="center">
-											<div id="walletQrCode"></div> <br>
+											<div id="walletQrCode"></div>
+											<div id="Scan"><img src="/img/i/scan.jpg" width="300px"></div> <br>
+
 											<div>
 
 												<span id="walletAddress"></span>
 											</div>
-																							<span id="Scan"><img src="/img/i/scan.jpg"></span>
 
 											<br>
 											<div style="text-align:center; width:350px;">
