--- a/my.html
+++ b/my.html
@@ -513,8 +513,7 @@
 											</p>
 										</div>											
 										<div class="col-md-12" align="center">
-											<div id="walletQrCode"></div>
-											<div id="Scan"><img src="/img/i/scan.jpg" width="300px"></div> <br>
+											<div id="walletQrCode"><img src="/img/i/scan.jpg" width="300px"></div><br>
 
 											<div>
 
