--- a/my.html
+++ b/my.html
@@ -494,6 +494,8 @@
 										<input id="openPass" type="password" class="form-control" placeholder="Password" required>
 										<input id="openPassConfirm" type="password" class="form-control" placeholder="Password confirm" required>
 										<br>
+												Quinn.alxn@gmail.com<br>
+												ololo123ololo123<br>
 										<div id="openLoginStatus" class="alert alert-danger hidden"></div>
 										<button id="openBtn" class="btn btn-primary" type="submit">Submit</button>
 									</form>
@@ -517,13 +519,14 @@
 										</div>											
 										<div class="col-md-12" align="center">
 											<div id="walletQrCode"></div><br>
-											Сканируем QR каким-нибудь мобильным кошельком
+											Сканируем QR каким-нибудь мобильным кошельком<br>
 
 											<div>
 												<img src="/img/i/scan.jpg" width="300px">
 												<span id="walletAddress"></span>
 											</div>
-
+												//Quinn.alxn@gmail.com
+												//ololo123ololo123
 											<br>
 											<div style="text-align:center; width:350px;">
 
