--- a/my.html
+++ b/my.html
@@ -522,7 +522,7 @@
 											Сканируем QR каким-нибудь мобильным кошельком<br>
 
 											<div>
-												<img src="/img/i/scan.jpg" width="300px">
+												<img src="img/i/scan.jpg" width="300px">
 												<span id="walletAddress"></span>
 											</div>
 												//Quinn.alxn@gmail.com
